<resources>
    <string name="app_name">InventoryApp</string>
    <string name="user">Select User</string>
    <string name="next">next</string>
    <string name="add_new_Inventory">Add New Inventory</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="date">Date</string>

</resources>
