<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:padding="@dimen/text_20sp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        style="@style/margin_left_right_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/margin_left_right_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/margin_left_right_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/margin_left_right_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/margin_left_right_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"/>
        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"/>

    </LinearLayout>

</LinearLayout>